<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#F1F0F0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/top_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:background="@drawable/rounded_bottom_edges"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/signup"
                android:fontFamily="@font/noto_sans_variable"
                android:textSize="25sp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/register_btn"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:backgroundTint="@color/colorBtn"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textStyle="bold"
                android:textColor="@color/colorTxt_black"/>


            <TextView
                android:id="@+id/register_navlink"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLinkBlue"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_navlink"
                />

            <ProgressBar
                android:id="@+id/register_progressbar"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/colorCart"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>